--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,12 @@ microservice {
         host     = localhost
         port     = 9514
       }
+
+      stamp-duty-land-tax-stub {
+        protocol = http
+        host     = localhost
+        port     = 10914
+      }
     }
 }
 
