--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,6 +82,7 @@ urls {
 }
 
 host = "http://localhost:10910"
+sdlt-address-lookup-host = "http://localhost:10910"
 
 accessibility-statement{
   service-path = "/sdlt-filing-frontend"
