--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,6 +59,7 @@ microservice {
 contact-frontend {
   host      = "http://localhost:9250"
   serviceId = "sdlt-filing-frontend"
+  url       = "http://localhost:9250"
 }
 
 timeout-dialog {
