Add Auth check for enrolment, calls to backend and backend connector, and tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,6 +48,12 @@ microservice {
         host     = localhost
         port     = 10914
       }
+
+      stamp-duty-land-tax {
+        protocol = http
+        host     = localhost
+        port     = 10913
+      }
       
       address-lookup-frontend {
             host = localhost
@@ -96,6 +102,8 @@ tracking-consent-frontend {
 play-frontend-hmrc {
     useRebrand = true
 }
+
+backend-feature-stub = true
 
 
 features {
