DTR-1802 - added before you start page for purchaser agent, removed welsh toggle and added captions for other before your start pages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -107,6 +107,6 @@ backend-feature-stub = true
 
 
 features {
-  welsh-translation: true
+  welsh-translation: false
   address-lookup-stub: false
 }
