DTR-2233: Adds No Enrolment Error page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,6 +59,12 @@ microservice {
             host = localhost
             port = 9028
       }
+
+      add-taxes-frontend {
+        protocol = http
+        host = localhost
+        port = 9730
+      }
     }
 }
 
