DTR-2236 - initial commit of implementation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,8 +56,14 @@ microservice {
       }
       
       address-lookup-frontend {
-            host = localhost
-            port = 9028
+        host = localhost
+        port = 9028
+      }
+
+      address-lookup-frontend {
+        protocol = http
+        host = localhost
+        port = 10912
       }
     }
 }
@@ -87,9 +93,9 @@ mongodb {
 }
 
 urls {
-  login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-  loginContinue = "http://localhost:9000/sdlt-filing-frontend"
-  signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
+  login          = "http://localhost:9949/auth-login-stub/gg-sign-in"
+  loginContinue  = "http://localhost:9000/sdlt-filing-frontend"
+  signOut        = "http://localhost:9553/bas-gateway/sign-out-without-state"
 }
 
 host = "http://localhost:10910"
