DTR-2236 - refine tests and behaviours

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,7 +60,7 @@ microservice {
         port = 9028
       }
 
-      address-lookup-frontend {
+      sdlt-management-frontend {
         protocol = http
         host = localhost
         port = 10912
