DTR-2233: Refactors add-taxes-frontend config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,12 +59,6 @@ microservice {
             host = localhost
             port = 9028
       }
-
-      add-taxes-frontend {
-        protocol = http
-        host = localhost
-        port = 9730
-      }
     }
 }
 
@@ -72,6 +66,10 @@ contact-frontend {
   host      = "http://localhost:9250"
   serviceId = "sdlt-filing-frontend"
   url       = "http://localhost:9250"
+}
+
+add-taxes-frontend {
+    host = "http://localhost:9730"
 }
 
 timeout-dialog {
