DTR-2236 - fix config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,12 +59,6 @@ microservice {
         host = localhost
         port = 9028
       }
-
-      sdlt-management-frontend {
-        protocol = http
-        host = localhost
-        port = 10912
-      }
     }
 }
 
@@ -76,6 +70,10 @@ contact-frontend {
 
 add-taxes-frontend {
     host = "http://localhost:9730"
+}
+
+sdlt-management-frontend {
+    host = "http://localhost:10912"
 }
 
 timeout-dialog {
