DTR-2236 - initial commit of implementation (#89)
* DTR-2236 - initial commit of implementation

* DTR-2236 - refine tests and behaviours

* DTR-2236 - update dependency to address PR BOT comment

* DTR-2236 amend config

* DTR-2236 - fix config

* DTR-2236 - rebased onto main

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,8 +56,8 @@ microservice {
       }
       
       address-lookup-frontend {
-            host = localhost
-            port = 9028
+        host = localhost
+        port = 9028
       }
     }
 }
@@ -70,6 +70,10 @@ contact-frontend {
 
 add-taxes-frontend {
     host = "http://localhost:9730"
+}
+
+sdlt-management-frontend {
+    host = "http://localhost:10912"
 }
 
 timeout-dialog {
@@ -87,9 +91,9 @@ mongodb {
 }
 
 urls {
-  login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-  loginContinue = "http://localhost:9000/sdlt-filing-frontend"
-  signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
+  login          = "http://localhost:9949/auth-login-stub/gg-sign-in"
+  loginContinue  = "http://localhost:9000/sdlt-filing-frontend"
+  signOut        = "http://localhost:9553/bas-gateway/sign-out-without-state"
 }
 
 host = "http://localhost:10910"
